--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
         {
             "name": "KaMeKuN",
             "email": "kame.laravel@gmail.com",
-            "homepage": "https://github.com/kamekun"
+            "homepage": "https://github.com/kame"
         }
     ],
     "require": {
-        "php": "^7.2|^8.0",
+        "php": "^7.3|^8.0",
         "livewire/livewire": "2.*",
         "laravel/framework": "^7.0|^8.0"
 
