--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,9 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.2||^8.0",
         "livewire/livewire": "2.*",
-        "laravel/framework": "^7.0|^8.0"
-
+        "laravel/framework": "^7.0||^8.0"
     },
     "autoload": {
         "psr-4": {
